# genshin_tools

./: .gitignore  Cargo.toml  README.md  build.sh  build_linux.sh  build_mac.sh  genshin_tools.js  genshin_tools_bg.wasm  index.html  sw.js
.cargo/: config.toml
.github/workflows/: deploy.yml  rust.yml
icons/: Icon.icns
src/: app.rs  constants.rs  future.rs  images.rs  lib.rs  main.rs  types.rs  util.rs
src/api/: genshin_dev.rs  mod.rs
src/theme/: icons.rs  mod.rs  style.rs
src/widgets/: artifact.rs  character.rs  domain.rs  element.rs  enemy.rs  food.rs  item.rs  mod.rs  potion.rs  tabs.rs  talent.rs
