[package]
name = "genshin_tools"
version = "0.3.1"
authors = ["Fireyy Zhu <fireyy@gmail.com>"]
edition = "2021"
rust-version = "1.60"
description = "This is a tool for Genshin Impact, using egui."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle]
name = "GenshinTools"
identifier = "com.fireyy.genshin_tools"
icon = ["icons/Icon.icns", "icons/icon-win-256.png", "icons/icon-win-32.png", "icons/icon-win-16.png"]
version = "1.0.0"
copyright = "Copyright (c) fireyy (2022). All rights reserved."
short_description = "This is a tool for Genshin Impact"
osx_minimum_system_version = "10.12"

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ehttp = "0.2"
anyhow = "1.0"
tracing = "0.1"
once_cell = "1.8.0"
egui_extras = { version = "0.19.0", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png", "webp"] }
lru = "0.8.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
cached_network_image = "1.0"
directories = "4.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
